feat: compile shaders in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
-cmake_minimum_required(VERSION 3.20)
-project(VulkanApp)
+cmake_minimum_required(VERSION 3.14)
+project(VKApp LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-
+# Use FetchContent to retrieve dependencies
 include(FetchContent)
 
 # Fetch GLFW
@@ -14,7 +12,7 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(glfw)
 
-# Fetch GLM
+# Fetch GLM (header-only)
 FetchContent_Declare(
     glm
     GIT_REPOSITORY https://github.com/g-truc/glm.git
@@ -26,25 +24,76 @@ FetchContent_MakeAvailable(glm)
 FetchContent_Declare(
     VulkanMemoryAllocator
     GIT_REPOSITORY https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
-    GIT_TAG v3.2.1 
+    GIT_TAG v3.2.1
 )
 FetchContent_MakeAvailable(VulkanMemoryAllocator)
 
-# Find Vulkan
+# Find Vulkan SDK (assumes environment variable is set)
 find_package(Vulkan REQUIRED)
 
-# Define executable target
-add_executable(VulkanApp src/main.cpp)
-
-# Include directories
-target_include_directories(VulkanApp PRIVATE 
-    ${Vulkan_INCLUDE_DIRS} 
-    ${VulkanMemoryAllocator_SOURCE_DIR}/include # Add VMA include path
+# Setup shader directories and files
+set(SHADER_DIR ${CMAKE_SOURCE_DIR}/shaders)
+file(GLOB SHADER_FILES 
+    "${SHADER_DIR}/*.vert"
+    "${SHADER_DIR}/*.frag"
 )
 
-# Link libraries
-target_link_libraries(VulkanApp PRIVATE 
-    Vulkan::Vulkan 
-    glfw 
+if(NOT DEFINED ENV{VULKAN_SDK})
+    message(FATAL_ERROR "VULKAN_SDK environment variable is not set!")
+endif()
+
+set(GLSLC "$ENV{VULKAN_SDK}/Bin/glslc.exe")
+set(SPIRV_DIR ${CMAKE_BINARY_DIR}/shaders)
+file(MAKE_DIRECTORY ${SPIRV_DIR})  # Ensure output directory exists
+
+# Compile each shader into SPIR-V
+set(COMPILED_SHADERS)
+foreach(SHADER ${SHADER_FILES})
+    get_filename_component(SHADER_NAME ${SHADER} NAME_WE)
+    get_filename_component(SHADER_EXT ${SHADER} EXT)  # e.g., ".vert"
+    string(LENGTH ${SHADER_EXT} EXT_LENGTH)
+    math(EXPR SUBSTRING_LENGTH "${EXT_LENGTH} - 1")
+    string(SUBSTRING ${SHADER_EXT} 1 ${SUBSTRING_LENGTH} SHADER_TYPE)
+    set(SPIRV_NAME ${SHADER_NAME}_${SHADER_TYPE}.spv)
+    set(SPIRV_OUTPUT ${SPIRV_DIR}/${SPIRV_NAME})
+
+    add_custom_command(
+        OUTPUT ${SPIRV_OUTPUT}
+        COMMAND ${GLSLC} ${SHADER} -o ${SPIRV_OUTPUT}
+        DEPENDS ${SHADER}
+        COMMENT "Compiling shader: ${SHADER} -> ${SPIRV_NAME}"
+        VERBATIM
+    )
+
+    list(APPEND COMPILED_SHADERS ${SPIRV_OUTPUT})
+endforeach()
+
+# Create a target that builds all shaders
+add_custom_target(CompileShaders ALL DEPENDS ${COMPILED_SHADERS})
+
+# Create the main executable
+add_executable(${PROJECT_NAME}
+    src/main.cpp
+    ${SHADER_FILES}
+)
+
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
+
+# Link required libraries
+target_link_libraries(${PROJECT_NAME} PRIVATE
+    glfw
+    Vulkan::Vulkan
     glm::glm
 )
+
+# Include directories for GLM and VMA (VMA is header-only)
+target_include_directories(${PROJECT_NAME} PRIVATE
+    ${glm_SOURCE_DIR}
+    ${VulkanMemoryAllocator_SOURCE_DIR}/include
+)
+
+# Ensure shaders are compiled before building the executable
+add_dependencies(${PROJECT_NAME} CompileShaders)
+
+# Organize Visual Studio project folders
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
