feat: implement context in main.cpp WIP
the result is the same, but validation layers are not visible because of debug message happening too late

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,9 @@ set(${PROJECT_NAME}_SOURCES
     "src/stb_image.h"
     "src/tiny_obj_loader.h"
     "src/core/window.h"
-    "src/core/window.cpp" "src/core/context.h" "src/core/context.cpp")
+    "src/core/window.cpp" 
+    "src/core/context.h" 
+    "src/core/context.cpp")
 
 # Add the project executable
 add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
