--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ set(${PROJECT_NAME}_SOURCES
     "src/core/window.h"
     "src/core/window.cpp" 
     "src/core/context.h" 
-    "src/core/context.cpp")
+    "src/core/context.cpp" "src/core/debug_messenger.h" "src/core/debug_messenger.cpp")
 
 # Add the project executable
 add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
