feat: encapsulate application class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,7 @@ set(${PROJECT_NAME}_SOURCES
     "src/resources/uniform_buffer.h" 
     "src/resources/uniform_buffer.cpp" 
     "src/renderer.h" 
-    "src/renderer.cpp")
+    "src/renderer.cpp" "src/application.h" "src/application.cpp")
 
 # Add the project executable
 add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
