feat: convert shared resource to pointer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,9 @@ set(${PROJECT_NAME}_SOURCES
         src/user/user_render_targets/main_scene_target.h
         src/user/user_render_targets/imgui_target.cpp
         src/user/user_render_targets/imgui_target.h
+        src/user/user_executors/dynamic_main_scene_executor.cpp
+        src/user/user_executors/dynamic_main_scene_executor.h
+        src/rendering/image_transition_manager.h
 )
 
 # Add ImGui source files with proper includes and links
