--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,8 @@ set(${PROJECT_NAME}_SOURCES
         src/rendering/image_transition_manager.h
         src/resources/ssbo_buffer.cpp
         src/resources/ssbo_buffer.h
+        src/rendering/camera/camera.cpp
+        src/rendering/camera/camera.h
 )
 
 # Add ImGui source files with proper includes and links
