feat: encapsulate gbuffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,8 @@ set(${PROJECT_NAME}_SOURCES
         src/resources/loaders/gltf_loader.h
         src/user/user_render_targets/depth_prepass.cpp
         src/user/user_render_targets/depth_prepass.h
+        src/user/user_render_targets/gbuffer_pass.cpp
+        src/user/user_render_targets/gbuffer_pass.h
 )
 
 # Add ImGui source files with proper includes and links
