--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -245,8 +245,10 @@ configure_file(
 )
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/textures/viking_room.png 
-               ${CMAKE_CURRENT_BINARY_DIR}/textures/viking_room.png 
-               COPYONLY)
+               ${CMAKE_CURRENT_BINARY_DIR}/textures/viking_room.png
+               ${CMAKE_CURRENT_SOURCE_DIR}/textures/circus_arena.hdr
+               ${CMAKE_CURRENT_BINARY_DIR}/textures/circus_arena.hdr
+                COPYONLY)
                
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/models/viking_room.obj
                ${CMAKE_CURRENT_BINARY_DIR}/models/viking_room.obj
